--- a/lista/lista03/index.html
+++ b/lista/lista03/index.html
@@ -1,1 +1,16 @@
-
+<!-- Tokisaki Kurumi -->
+<html lang="pt-bt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="apostila, html, curso">
+    <meta name="description" content="Aprenda HTML em poucos minutos e comece a criar os seus
+    próprios sites">
+    <meta name="author" content="Luiz Henrique Caldas Ferreira">
+    <meta http-equiv="refresh" content="2">
+    <meta name="robots" content="noindex, no follow">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Luiz Henrique Caldas Ferreira</h1>
+</body>
+</html>
