--- a/lista/lista05/index.html
+++ b/lista/lista05/index.html
@@ -21,8 +21,10 @@
     <h1 style="color: red;">Minha Escolaridade:</h1> 
     <p> Ensino Médio completo pelo Colégio Ann Mackenzie de Uberlândia e cursando Licenciatura em Computação pelo Instituto Federal do Triângulo Mineiro. Inglês mediano, sem conclusão de curso.</p>
     <br>
-    <img src="AnnMack.jpg" width="45%"> 
-    <img src="IFTM.jpg" width="50%">
+    <img src="https://www.mackenzie.br/fileadmin/ARQUIVOS/Public/8-ead/polos/uberlandia_novo__.PNG" width="45%">
+    <img src="https://diariodeuberlandia.com.br/images/noticias/21192/28052019194030_IFTM.jpg" width="50%">
+    <!-- <img src="AnnMack.jpg" width="45%">  -->
+    <!-- <img src="IFTM.jpg" width="50%"> -->
     <hr>
     <h1 style="color: blue;">Meus Hobbies:</h1> 
     <p>No meu tempo livre gosto de ler light novel e mangás (revistas em quadrinho japonêsas), de ver vídeos no YouTube, além de jogar roblox (plataforma de jogos on-line) e outros jogos on-line com meus amigos. Também gosto de me exercitar em praças públicas e andar de bicicleta as vezes.</p>
