--- a/lista/lista05/index.html
+++ b/lista/lista05/index.html
@@ -7,7 +7,7 @@
     <title>Lista 5</title>
 </head>
 <body>
-    <img src="Foto minha.jpg" width="15%" align="left">
+    <img src="Foto minha.jpg" width="15%" height="15%" aling="left">
     <ul style="display: flow-root;">
         <li>Nome: Luiz Henrique Caldas Ferreia</li>
         <li>Idade: 18</li> 
@@ -21,8 +21,8 @@
     <h1 style="color: red;">Minha Escolaridade:</h1> 
     <p> Ensino Médio completo pelo Colégio Ann Mackenzie de Uberlândia e cursando Licenciatura em Computação pelo Instituto Federal do Triângulo Mineiro. Inglês mediano, sem conclusão de curso.</p>
     <br>
-    <img src="https://www.mackenzie.br/fileadmin/ARQUIVOS/Public/8-ead/polos/uberlandia_novo__.PNG" width="45%">
-    <img src="https://diariodeuberlandia.com.br/images/noticias/21192/28052019194030_IFTM.jpg" width="50%">
+    <img src="https://www.mackenzie.br/fileadmin/ARQUIVOS/Public/8-ead/polos/uberlandia_novo__.PNG" width="45%" height="45%">
+    <img src="https://diariodeuberlandia.com.br/images/noticias/21192/28052019194030_IFTM.jpg" width="50%" height="50%">
     <!-- <img src="AnnMack.jpg" width="45%">  -->
     <!-- <img src="IFTM.jpg" width="50%"> -->
     <hr>
