--- a/lista/lista05/index.html
+++ b/lista/lista05/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Luiz Henrique">
-    <meta name="description" content="Descrição do Luiz Henrique">
+    <meta name="description" content="Currículo do Luiz Henrique">
     <title>Lista 5</title>
 </head>
 <body>
     <img src="Foto minha.jpg" width="100" align="left">
     <ul style="display: flow-root;">
-        <li>Nome: Luiz Henrique Caldas Ferreia</li>
+        <li>Nome: Luiz Henrique Caldas Ferreira</li>
         <li>Idade: 18</li> 
         <li>Nascimento: 15/04/2005</li>
         <li>Telefone: (34) 99654-9994</li>
@@ -18,7 +18,7 @@
     </ul>
     <hr>
     <h1 style="color: red;">Minha Escolaridade:</h1> 
-    <p> Ensino Médio completo pelo Colégio Ann Mackenzie de Uberlândia e cursando Licenciatura em Computação pelo Instituto Federal do Triângulo Mineiro. Inglês mediano, sem conclusão de curso.</p>
+    <p> Ensino Médio completo pelo Colégio Ann Mackenzie de Uberlândia e cursando Licenciatura em Computação pelo Instituto Federal do Triângulo Mineiro. Inglês intermediário, fazendo no Global Connection.</p>
     <br>
     <img src="https://www.mackenzie.br/fileadmin/ARQUIVOS/Public/8-ead/polos/uberlandia_novo__.PNG" width="400">
     <img src="https://diariodeuberlandia.com.br/images/noticias/21192/28052019194030_IFTM.jpg" width="500">
@@ -26,7 +26,7 @@
     <!-- <img src="IFTM.jpg" width="50%"> -->
     <hr>
     <h1 style="color: blue;">Meus Hobbies:</h1> 
-    <p>No meu tempo livre gosto de ler light novel e mangás (revistas em quadrinho japonêsas), de ver vídeos no YouTube, além de jogar roblox (plataforma de jogos on-line) e outros jogos on-line com meus amigos. Também gosto de me exercitar em praças públicas e andar de bicicleta as vezes.</p>
+    <p>Em meu tempo livre gosto de ler light novel e mangás (revistas em quadrinho japonêsas), de ver vídeos no YouTube, além de jogar roblox (plataforma de jogos on-line) e outros jogos on-line com meus amigos. Também gosto de me exercitar em praças públicas e andar de bicicleta.</p>
     <img src="">
     <hr>
     <h2 style="color: purple;">Links:</h2> 
