--- a/tabalho/index.html
+++ b/tabalho/index.html
@@ -102,10 +102,10 @@
                         </details></p>
                 </tr>
                 <tr>
-                    <td>Conheça ... [+]</td>
-                    <td>Conheça ... [+]</td>
-                    <td>Conheça ... [+]</td>
-                    <td>Conheça ... [+]</td>
+                    <td style="color: white;">Conheça ... [+]</td>
+                    <td style="color: white;">Conheça ... [+]</td>
+                    <td style="color: white;">Conheça ... [+]</td>
+                    <td style="color: white;">Conheça ... [+]</td>
                 </tr>
             </table>
         </section>
